Fixing rendering issue on mobile - specified background-position-y on gradient text

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -206,7 +206,8 @@ body {
     .home-headline--gradient {
       background: linear-gradient(to right, #441d8c 0%, #546ead 100%);
       -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent; }
+      -webkit-text-fill-color: transparent;
+      background-position-y: 4px; }
     @media (min-width: 56.25em) {
       .home-headline {
         font-size: 3.6rem;
