--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -29,7 +29,8 @@
         
         &--gradient {
             @include gradient-text;
-            //background: $gradient-violet-blue-bright; 
+            
+            background-position-y: 4px;
     
         }
         
